--- a/aibattle/3.good_game_square_controlable4o.ipynb
+++ b/aibattle/3.good_game_square_controlable4o.ipynb
@@ -7,6 +7,21 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pygame 2.6.0 (SDL 2.28.4, Python 3.11.5)\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-04-23 20:16:48.029 python[33142:254751] TSM AdjustCapsLockLEDForKeyTransitionHandling - _ISSetPhysicalKeyboardCapsLockLED Inhibit\n"
+     ]
+    },
+    {
      "ename": "SystemExit",
      "evalue": "",
      "output_type": "error",
