--- a/RAG_OpenAI/03_vectorstores_and_embeddings.ipynb
+++ b/RAG_OpenAI/03_vectorstores_and_embeddings.ipynb
@@ -17,6 +17,12 @@
         "id": "0d647f70"
       },
       "source": [
+        "程式是從 [deeplearning.ai](deeplearning.ai) 的 \"[LangChain Chat with Your Data](https://learn.deeplearning.ai/courses/langchain-chat-with-your-data/lesson/snupv/introduction)\" 取得\n",
+        "\n",
+        "\"LangChain Chat with Your Data\" 課程可在底下連結取得:\n",
+        "\n",
+        "  https://learn.deeplearning.ai/courses/langchain-chat-with-your-data/lesson/snupv/introduction\n",
+        "\n",
         "# Vectorstores and Embeddings\n",
         "\n",
         "Recall the overall workflow for retrieval augmented generation (RAG):"
