--- a/RAG_OpenAI/03_vectorstores_and_embeddings.ipynb
+++ b/RAG_OpenAI/03_vectorstores_and_embeddings.ipynb
@@ -31,6 +31,35 @@
     {
       "cell_type": "code",
       "source": [
+        "# prompt: !cp -r /content/doc /content/drive/MyDrive/\n",
+        "\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "!cp -r /content/doc /content/drive/MyDrive/\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "f2ingcbVmhlC",
+        "outputId": "fd933c06-e764-4e16-bbfe-9b96eca39d21"
+      },
+      "id": "f2ingcbVmhlC",
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ls: cannot access 'drive/MyDrive/發佈': No such file or directory\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "!pip install dotenv"
       ],
       "metadata": {
@@ -1114,6 +1143,27 @@
       "source": [
         "Approaches discussed in the next lecture can be used to address both!"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 如果是在 Colab 執行這個程式，\n",
+        "### 需要將 docs 子目錄存起來，後續可以直接使用這個 database"
+      ],
+      "metadata": {
+        "id": "OgGCdWmMr7yc"
+      },
+      "id": "OgGCdWmMr7yc"
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "9PwIcNoNr661"
+      },
+      "id": "9PwIcNoNr661",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
