--- a/GRPO/Llama3_1_(8B)_GRPO.ipynb
+++ b/GRPO/Llama3_1_(8B)_GRPO.ipynb
@@ -9474,13 +9474,16 @@
         "3. Llama 3.2 Vision finetuning - Radiography use case. [Free Colab](https://colab.research.google.com/github/unslothai/notebooks/blob/main/nb/Llama3.2_(11B)-Vision.ipynb)\n",
         "6. See notebooks for DPO, ORPO, Continued pretraining, conversational finetuning and more on our [documentation](https://docs.unsloth.ai/get-started/unsloth-notebooks)!\n",
         "\n",
-        "<div class=\"align-center\">\n",
-        "  <a href=\"https://unsloth.ai\"><img src=\"https://github.com/unslothai/unsloth/raw/main/images/unsloth%20new%20logo.png\" width=\"115\"></a>\n",
-        "  <a href=\"https://discord.gg/unsloth\"><img src=\"https://github.com/unslothai/unsloth/raw/main/images/Discord.png\" width=\"145\"></a>\n",
-        "  <a href=\"https://docs.unsloth.ai/\"><img src=\"https://github.com/unslothai/unsloth/blob/main/images/documentation%20green%20button.png?raw=true\" width=\"125\"></a>\n",
+        "\n",
+        "[unsloth](https://unsloth.ai/)\n",
+        "\n",
+        "[join our discord](https://discord.gg/unsloth)\n",
+        "\n",
+        "[Documentation](https://docs.unsloth.ai/)\n",
+        "\n",
         "\n",
         "  Join Discord if you need help + ⭐️ <i>Star us on <a href=\"https://github.com/unslothai/unsloth\">Github</a> </i> ⭐️\n",
-        "</div>\n"
+        "\n"
       ]
     },
     {
