--- a/GRPO/Llama3_1_(8B)_GRPO.ipynb
+++ b/GRPO/Llama3_1_(8B)_GRPO.ipynb
@@ -24,7 +24,7 @@
         "\n",
         "[Documentation](https://docs.unsloth.ai/)\n",
         "\n",
-        "Join Discord if you need help + ⭐ <i>Star us on <a href=\"https://github.com/unslothai/unsloth\">Github</a> </i> ⭐\n",
+        "Join Discord if you need help +  <i>Star us on <a href=\"https://github.com/unslothai/unsloth\">Github</a> </i>\n",
         "\n",
         "\n",
         "To install Unsloth on your own computer, follow the installation instructions on our Github page [here](https://docs.unsloth.ai/get-started/installing-+-updating).\n",
@@ -107,23 +107,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "59DIs5BMcvjN",
-        "outputId": "0eb39759-9238-4214-b941-10b13997f852"
+        "id": "59DIs5BMcvjN"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Unsloth: Patching Xformers to fix some performance issues.\n",
-            "🦥 Unsloth: Will patch your computer to enable 2x faster free finetuning.\n",
-            "🦥 Unsloth Zoo will now patch everything to make training faster!\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "from unsloth import FastLanguageModel, PatchFastRL\n",
         "PatchFastRL(\"GRPO\", FastLanguageModel)"
@@ -9482,7 +9468,7 @@
         "[Documentation](https://docs.unsloth.ai/)\n",
         "\n",
         "\n",
-        "  Join Discord if you need help + ⭐️ <i>Star us on <a href=\"https://github.com/unslothai/unsloth\">Github</a> </i> ⭐️\n",
+        "  Join Discord if you need help +  <i>Star us on <a href=\"https://github.com/unslothai/unsloth\">Github</a> </i>\n",
         "\n"
       ]
     },
@@ -9849,7 +9835,7 @@
         "from google.colab import drive\n",
         "import os\n",
         "\n",
-        "# 🚀 1️⃣ 掛載 Google Drive\n",
+        "# 1. 掛載 Google Drive\n",
         "drive.mount('/content/drive')\n",
         "\n",
         "# 設定 Google Drive 儲存目錄\n",
@@ -9858,62 +9844,35 @@
         "# 確保 z-發布 目錄存在\n",
         "os.makedirs(drive_path, exist_ok=True)\n",
         "\n",
-        "# 🚀 2️⃣ 儲存原始模型 (`model0`)\n",
-        "print(\"📥 儲存原始模型 model0 ...\")\n",
+        "#  2. 儲存原始模型 (`model0`)\n",
+        "print(\" 儲存原始模型 model0 ...\")\n",
         "#model.save_pretrained(\"model0\")\n",
         "#tokenizer.save_pretrained(\"model0\")\n",
         "!zip -r model0.zip model0\n",
         "!mv model0.zip {drive_path}/model0.zip\n",
-        "print(f\"✅ model0.zip 已存入 Google Drive: {drive_path}/model0.zip\")\n",
+        "print(f\" model0.zip 已存入 Google Drive: {drive_path}/model0.zip\")\n",
         "\n",
-        "# 🚀 3️⃣ 儲存微調後的完整模型 (`model1`)\n",
-        "print(\"📥 儲存微調後的完整模型 model1 ...\")\n",
+        "# 3️. 儲存微調後的完整模型 (`model1`)\n",
+        "print(\" 儲存微調後的完整模型 model1 ...\")\n",
         "#model.save_pretrained_merged(\"model1\", tokenizer, save_method=\"merged_16bit\")\n",
         "#!zip -r model1.zip model1\n",
         "!mv model1.zip {drive_path}/model1.zip\n",
-        "print(f\"✅ model1.zip 已存入 Google Drive: {drive_path}/model1.zip\")\n",
+        "print(f\" model1.zip 已存入 Google Drive: {drive_path}/model1.zip\")\n",
         "\n",
-        "# 🚀 4️⃣ 儲存 LoRA 權重 (`model1_lora`)\n",
-        "print(\"📥 儲存 LoRA 權重 model1_lora ...\")\n",
+        "# 4️. 儲存 LoRA 權重 (`model1_lora`)\n",
+        "print(\" 儲存 LoRA 權重 model1_lora ...\")\n",
         "#model.save_lora(\"model1_lora\")\n",
         "#!zip -r model1_lora.zip model1_lora\n",
         "!mv model1_lora.zip {drive_path}/model1_lora.zip\n",
-        "print(f\"✅ model1_lora.zip 已存入 Google Drive: {drive_path}/model1_lora.zip\")\n",
+        "print(f\" model1_lora.zip 已存入 Google Drive: {drive_path}/model1_lora.zip\")\n",
         "\n",
-        "print(\"\\n🎉 所有模型已成功儲存到 Google Drive！\")\n"
+        "print(\"\\n 所有模型已成功儲存到 Google Drive！\")\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "xkMJVE4hqXvv",
-        "outputId": "e42e239f-a160-4739-9288-f25954aa5b42"
+        "id": "xkMJVE4hqXvv"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mounted at /content/drive\n",
-            "📥 儲存原始模型 model0 ...\n",
-            "  adding: model0/ (stored 0%)\n",
-            "  adding: model0/README.md (deflated 66%)\n",
-            "  adding: model0/adapter_model.safetensors (deflated 8%)\n",
-            "  adding: model0/adapter_config.json (deflated 56%)\n",
-            "  adding: model0/tokenizer_config.json (deflated 94%)\n",
-            "  adding: model0/special_tokens_map.json (deflated 71%)\n",
-            "  adding: model0/tokenizer.json (deflated 85%)\n",
-            "✅ model0.zip 已存入 Google Drive: /content/drive/MyDrive/z-發布/model0.zip\n",
-            "📥 儲存微調後的完整模型 model1 ...\n",
-            "✅ model1.zip 已存入 Google Drive: /content/drive/MyDrive/z-發布/model1.zip\n",
-            "📥 儲存 LoRA 權重 model1_lora ...\n",
-            "✅ model1_lora.zip 已存入 Google Drive: /content/drive/MyDrive/z-發布/model1_lora.zip\n",
-            "\n",
-            "🎉 所有模型已成功儲存到 Google Drive！\n"
-          ]
-        }
-      ]
+      "outputs": []
     }
   ],
   "metadata": {
