--- a/GRPO/Llama3_1_(8B)_GRPO.ipynb
+++ b/GRPO/Llama3_1_(8B)_GRPO.ipynb
@@ -77,8 +77,8 @@
         "for x in modules: sys.modules.pop(x) if \"PIL\" in x or \"google\" in x else None\n",
         "\n",
         "!pip install unsloth vllm\n",
-        "#!pip install --upgrade pillow\n",
-        "!pip install Pillow==11.1.0\n",
+        "!pip install --upgrade pillow\n",
+        "#!pip install Pillow==11.1.0\n",
         "# If you are running this notebook on local, you need to install `diffusers` too\n",
         "# !pip install diffusers\n",
         "# Temporarily install a specific TRL nightly version\n",
