--- a/GRPO/Llama3_1_(8B)_GRPO.ipynb
+++ b/GRPO/Llama3_1_(8B)_GRPO.ipynb
@@ -8763,7 +8763,9 @@
       },
       "outputs": [],
       "source": [
-        "model.save_lora(\"grpo_saved_lora\")"
+        "'''\n",
+        "model.save_lora(\"grpo_saved_lora\")\n",
+        "'''"
       ]
     },
     {
@@ -8925,12 +8927,14 @@
     {
       "cell_type": "code",
       "source": [
+        "'''\n",
         "from google.colab import files\n",
         "\n",
         "model.save_pretrained(\"model0\")\n",
         "tokenizer.save_pretrained(\"model0\")\n",
         "!zip -r model0.zip model0\n",
-        "files.download(\"model0.zip\")"
+        "files.download(\"model0.zip\")\n",
+        "'''"
       ],
       "metadata": {
         "colab": {
@@ -9022,11 +9026,23 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# 我們單純化只存 model1.zip\n",
+        "基本上會有一點困難，因為 Colab 免費版的極限快到了..."
+      ],
+      "metadata": {
+        "id": "f6oeP2TQ-DM3"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
+        "\n",
+        "from google.colab import files\n",
         "model.save_pretrained_merged(\"model1\", tokenizer, save_method=\"merged_16bit\")\n",
         "!zip -r model1.zip model1\n",
-        "files.download(\"model1.zip\")"
+        "files.download(\"model1.zip\")\n"
       ],
       "metadata": {
         "id": "K-znt61XlOkB"
@@ -9037,6 +9053,7 @@
     {
       "cell_type": "code",
       "source": [
+        "'''\n",
         "from google.colab import files\n",
         "# 存儲 LoRA 微調權重\n",
         "model.save_lora(\"model1_lora\")\n",
@@ -9045,7 +9062,8 @@
         "!zip -r model1_lora.zip model1_lora\n",
         "\n",
         "# 下載 LoRA 權重\n",
-        "files.download(\"model1_lora.zip\")\n"
+        "files.download(\"model1_lora.zip\")\n",
+        "'''"
       ],
       "metadata": {
         "id": "6AGRaHDel5zk"
@@ -9055,43 +9073,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "import os\n",
-        "\n",
-        "# 1. 掛載 Google Drive\n",
-        "drive.mount('/content/drive')\n",
-        "\n",
-        "# 設定 Google Drive 儲存目錄\n",
-        "drive_path = \"/content/drive/MyDrive/z-發布\"\n",
-        "\n",
-        "# 確保 z-發布 目錄存在\n",
-        "os.makedirs(drive_path, exist_ok=True)\n",
-        "\n",
-        "#  2. 儲存原始模型 (`model0`)\n",
-        "print(\" 儲存原始模型 model0 ...\")\n",
-        "#model.save_pretrained(\"model0\")\n",
-        "#tokenizer.save_pretrained(\"model0\")\n",
-        "!zip -r model0.zip model0\n",
-        "!mv model0.zip {drive_path}/model0.zip\n",
-        "print(f\" model0.zip 已存入 Google Drive: {drive_path}/model0.zip\")\n",
-        "\n",
-        "# 3️. 儲存微調後的完整模型 (`model1`)\n",
-        "print(\" 儲存微調後的完整模型 model1 ...\")\n",
-        "#model.save_pretrained_merged(\"model1\", tokenizer, save_method=\"merged_16bit\")\n",
-        "#!zip -r model1.zip model1\n",
-        "!mv model1.zip {drive_path}/model1.zip\n",
-        "print(f\" model1.zip 已存入 Google Drive: {drive_path}/model1.zip\")\n",
-        "\n",
-        "# 4️. 儲存 LoRA 權重 (`model1_lora`)\n",
-        "print(\" 儲存 LoRA 權重 model1_lora ...\")\n",
-        "#model.save_lora(\"model1_lora\")\n",
-        "#!zip -r model1_lora.zip model1_lora\n",
-        "!mv model1_lora.zip {drive_path}/model1_lora.zip\n",
-        "print(f\" model1_lora.zip 已存入 Google Drive: {drive_path}/model1_lora.zip\")\n",
-        "\n",
-        "print(\"\\n 所有模型已成功儲存到 Google Drive！\")\n"
-      ],
+      "source": [],
       "metadata": {
         "id": "xkMJVE4hqXvv"
       },
@@ -9104,6 +9086,7 @@
     "colab": {
       "gpuType": "T4",
       "provenance": [],
+      "name": "Llama3_1_(8B)_GRPO.ipynb",
       "include_colab_link": true
     },
     "kernelspec": {
