--- a/GRPO/0_Llama3_2_(3B)_GRPO_ollama.ipynb
+++ b/GRPO/0_Llama3_2_(3B)_GRPO_ollama.ipynb
@@ -9671,8 +9671,8 @@
     {
       "cell_type": "code",
       "source": [
-        "!mv /content/model1/unsloth.F16.gguf /content/NCU_GRPO.gguf\n",
-        "#!mv /content/model1/unsloth.Q4_K_M.gguf /content/NCU_GRPO.gguf"
+        "#!mv /content/model1/unsloth.F16.gguf /content/NCU_GRPO.gguf\n",
+        "!mv /content/model1/unsloth.Q4_K_M.gguf /content/NCU_GRPO.gguf"
       ],
       "metadata": {
         "id": "uTpjYDcg56le"
